@@ -98,7 +98,7 @@ lappend check_functions "qconf_sul_check"	;# Show user list
 lappend check_functions "qconf_sprjl_check"	;# Show project list
 
 # New options, non-show DONE
-append_check_and_exclude_in_jgdi "qconf_add_delete_manager" "Options *q do not hadle queue instances"	;# Add and delete manager users 
+append_check_and_exclude_in_jgdi "qconf_add_delete_manager" "Options *q do not handle queue instances"	;# Add and delete manager users 
 append_check_and_exclude_in_jgdi "qconf_add_show_mod_del_queue" "JGDI Shell can't handle queue instances (bug)" 	;# Add, show, modify and delete queue "qconf_queue.q"
 append_check_and_exclude_in_jgdi "qconf_add_show_delete_stnode" "Options *stnode not implemented" ;# Add, show and delete share tree nodes
 append_check_and_exclude_in_jgdi "qconf_create_modify_sharetree" "Options *stree not implemented" ;# create and modify a sharetree (qconf -Mstree)
@@ -146,6 +146,7 @@ proc qconf_init_level {} {
 proc qconf_setup {} {
    global ts_config CHECK_USER 
    global qconf_original_host_groups qconf_original_usersets qconf_orig_queues qconf_project qconf_sched_config qconf_userlist 
+
    global backup_allhosts
    global queue_names CHECK_JGDI_ENABLED
 
@@ -1338,10 +1339,13 @@ proc qconf_add_delete_manager {} {
    del_manager "qconf_user"
 
    # Now delete manager "qconf_user" again
-   ts_log_fine "Negative test for qconf -dm ..."
-   set result [del_manager "qconf_user" "" "" 0]
-   if {$result == 0} {
-      ts_log_severe "qconf -dm succeeded, but should have failed"
+   # Don't run it with 6.0, here qconf will exit 0
+   if {$ts_config(gridengine_version) >= 61} {
+      ts_log_fine "Negative test for qconf -dm ..."
+      set result [del_manager "qconf_user" "" "" 0]
+      if {$result == 0} {
+         ts_log_severe "qconf -dm succeeded, but should have failed"
+      }
    }
 }
 
